--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Slider Swiper.js</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="img/dev.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/swiper.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="css/estilos.css">
 
   <!-- Demo styles -->
@@ -63,7 +63,7 @@
   </div>
 
   <!-- Swiper JS -->
-  <script src="js/swiper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
   <script>
